[editor] Fix PropsPanel styling to prevent horizontal scrolling

--- a/projects/editor/src/app/components/properties-panel/element-properties-panel.component.css
+++ b/projects/editor/src/app/components/properties-panel/element-properties-panel.component.css
@@ -4,7 +4,7 @@
 
 mat-tab-group {
   overflow: auto;
-  padding: 0 10px;
+  padding: 0 5px;
 }
 
 .panel-title {
